# NGIN.Reflection

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Plan.MD  README.md
benchmarks/: CMakeLists.txt  NameInternerBench.cpp  NameLookupBench.cpp  ReflectionBench.cpp
cmake/: BoostUT.cmake  BoostUTAddTests.cmake  NGINReflectionConfig.cmake.in  SyncCompileCommands.cmake
docs/: Architecture.md
examples/: CMakeLists.txt
examples/Adapters/: CMakeLists.txt  main.cpp
examples/Methods/: CMakeLists.txt  main.cpp
examples/QuickStart/: CMakeLists.txt  main.cpp
include/NGIN/Reflection/: ABI.hpp  ABIMerge.hpp  Adapters.hpp  Any.hpp  Builder.hpp  Convert.hpp  Export.hpp  ModuleInit.hpp  NameUtils.hpp  Reflection.hpp  Registry.hpp  TypeBuilder.hpp  Types.hpp
src/: ABI.cpp  ABIMerge.cpp  Registry.cpp
tests/: CMakeLists.txt  main.cpp
tests/Interop/: Host.cpp  PluginA.cpp  PluginB.cpp
tests/Reflection/: ABIExport.cpp  ABIMergeErrors.cpp  AdaptersTests.cpp  BaseMetadata.cpp  BasicTests.cpp  Constructors.cpp  DescribeFallback.cpp  Diagnostics.cpp  EdgeCases.cpp  EnumReflection.cpp  FlatHashMapAdapter.cpp  Functions.cpp  LookupTests.cpp  ModuleInitTests.cpp  OverloadScoring.cpp  OverloadScoringSmall.cpp  Phase1Basic.cpp  Phase1Methods.cpp  Properties.cpp  SpanInvoke.cpp  TypedInvoke.cpp  TypedResolve.cpp
